[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my-env"
version = "0.1.0"
description = "AI Interview Trainer Environment for OpenEnv"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "groq",
    "python-dotenv",
    "fastapi",
    "uvicorn",
    "pydantic"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["env*"]
